Fixing incorrect version of text align

--- a/styles/about.css
+++ b/styles/about.css
@@ -18,7 +18,7 @@ body {
 	grid-area: 3 / 1 / 4 / 4; 
 	color: var(--dark-text-color);
     display: inline-block;
-    text-align-last: center;
+    text-align: center;
     margin: 0 10% 34px 10%;
     font-size: 22px;
 }
